--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   "scripts": {
     "build": "truffle compile",
     "migrate": "truffle migrate",
-    "start": "ganache"
+    "start": "ganache",
+    "lint:sol": "solhint 'contracts/**/*.sol'",
+    "prettier:sol": "prettier --write 'contracts/**/*.sol'"
   },
   "devDependencies": {
-    "ganache": "^7.2.0"
+    "ganache": "^7.2.0",
+    "prettier": "^2.6.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solhint": "^3.3.7",
+    "solhint-plugin-prettier": "^0.0.5"
   }
 }
