--- a/package.json
+++ b/package.json
@@ -8,17 +8,27 @@
     "build": "truffle compile",
     "postinstall": "yarn build && yarn generate-types",
     "migrate": "truffle migrate",
+    "test": "truffle test",
     "start": "ganache",
     "lint:sol": "solhint 'contracts/**/*.sol'",
+    "lint:ts": "eslint 'test/**/*.ts'",
     "prettier:sol": "prettier --write 'contracts/**/*.sol'"
   },
   "devDependencies": {
     "@typechain/truffle-v5": "^8.0.0",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-mocha": "^10.0.5",
     "ganache": "^7.2.0",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
-    "typechain": "^8.0.0"
+    "typechain": "^8.0.0",
+    "typescript": "^4.7.2"
   }
 }
